{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 85,
  "lineage": "d46e56e7-c526-88d4-9f67-77b13d2bd51b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "swiggy-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fc344948f0f61b0c",
            "arn": "arn:aws:ec2:us-east-1:352956325393:elastic-ip/eipalloc-0fc344948f0f61b0c",
            "association_id": "eipassoc-0681dc97610056a71",
            "domain": "vpc",
            "id": "eipalloc-0fc344948f0f61b0c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08ab6ef1725b90987",
            "private_dns": "ip-10-0-0-9.ec2.internal",
            "private_ip": "10.0.0.9",
            "public_dns": "ec2-54-234-245-29.compute-1.amazonaws.com",
            "public_ip": "54.234.245.29",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "swiggy-nat-eip"
            },
            "tags_all": {
              "Name": "swiggy-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "swiggy-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:352956325393:internet-gateway/igw-09653f877fe7e3fa3",
            "id": "igw-09653f877fe7e3fa3",
            "owner_id": "352956325393",
            "tags": {
              "Name": "swiggy-igw"
            },
            "tags_all": {
              "Name": "swiggy-igw"
            },
            "vpc_id": "vpc-06e0db450459c2c5a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:352956325393:loadbalancer/app/swiggy-lb/c17c1ba85e1026c0",
            "arn_suffix": "app/swiggy-lb/c17c1ba85e1026c0",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "swiggy-lb-528169012.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:352956325393:loadbalancer/app/swiggy-lb/c17c1ba85e1026c0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "swiggy-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0685eaca492e01aa2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0825c8cb5b164110b"
              },
              {
                "subnet_id": "subnet-0a9830da7164a1372"
              }
            ],
            "subnets": [
              "subnet-0825c8cb5b164110b",
              "subnet-0a9830da7164a1372"
            ],
            "vpc_id": "vpc-06e0db450459c2c5a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.swiggy-alb-sg-1",
            "aws_subnet.swiggy-pub-sub-1",
            "aws_subnet.swiggy-pub-sub-2",
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "external-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:352956325393:targetgroup/external-tg/a53212410ff21545",
            "arn_suffix": "targetgroup/external-tg/a53212410ff21545",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:352956325393:targetgroup/external-tg/a53212410ff21545",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "external-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06e0db450459c2c5a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "swiggy-natgw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fc344948f0f61b0c",
            "association_id": "eipassoc-0681dc97610056a71",
            "connectivity_type": "public",
            "id": "nat-02844a1f44d3b5d8a",
            "network_interface_id": "eni-08ab6ef1725b90987",
            "private_ip": "10.0.0.9",
            "public_ip": "54.234.245.29",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a9830da7164a1372",
            "tags": {
              "Name": "swiggy-natgw-01"
            },
            "tags_all": {
              "Name": "swiggy-natgw-01"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.swiggy-nat-eip",
            "aws_internet_gateway.swiggy-igw",
            "aws_subnet.swiggy-pub-sub-1",
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "swiggy-app-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:352956325393:route-table/rtb-0d3440f0b7799a352",
            "id": "rtb-0d3440f0b7799a352",
            "owner_id": "352956325393",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02844a1f44d3b5d8a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "swiggy-app-rt"
            },
            "tags_all": {
              "Name": "swiggy-app-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e0db450459c2c5a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.swiggy-nat-eip",
            "aws_internet_gateway.swiggy-igw",
            "aws_nat_gateway.swiggy-natgw-01",
            "aws_subnet.swiggy-pub-sub-1",
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "swiggy-web-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:352956325393:route-table/rtb-06902d0a41764818f",
            "id": "rtb-06902d0a41764818f",
            "owner_id": "352956325393",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09653f877fe7e3fa3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "swiggy-web-rt"
            },
            "tags_all": {
              "Name": "swiggy-web-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e0db450459c2c5a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.swiggy-igw",
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "swiggy-rt-as-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bc00469d51f0f31",
            "route_table_id": "rtb-06902d0a41764818f",
            "subnet_id": "subnet-0a9830da7164a1372"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.swiggy-igw",
            "aws_route_table.swiggy-web-rt",
            "aws_subnet.swiggy-pub-sub-1",
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "swiggy-rt-as-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db1127143fb878cc",
            "route_table_id": "rtb-06902d0a41764818f",
            "subnet_id": "subnet-0825c8cb5b164110b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.swiggy-igw",
            "aws_route_table.swiggy-web-rt",
            "aws_subnet.swiggy-pub-sub-2",
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "swiggy-rt-as-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b36c680130360bef",
            "route_table_id": "rtb-0d3440f0b7799a352",
            "subnet_id": "subnet-088bc82767de0921a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.swiggy-nat-eip",
            "aws_internet_gateway.swiggy-igw",
            "aws_nat_gateway.swiggy-natgw-01",
            "aws_route_table.swiggy-app-rt",
            "aws_subnet.swiggy-pub-sub-1",
            "aws_subnet.swiggy-pvt-sub-1",
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "swiggy-rt-as-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0824d4ea1d6a9585d",
            "route_table_id": "rtb-0d3440f0b7799a352",
            "subnet_id": "subnet-093fa716193c69a81"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.swiggy-nat-eip",
            "aws_internet_gateway.swiggy-igw",
            "aws_nat_gateway.swiggy-natgw-01",
            "aws_route_table.swiggy-app-rt",
            "aws_subnet.swiggy-pub-sub-1",
            "aws_subnet.swiggy-pvt-sub-2",
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "swiggy-rt-as-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f80caa0ec0f940f",
            "route_table_id": "rtb-0d3440f0b7799a352",
            "subnet_id": "subnet-0163c1e44ac9ea896"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.swiggy-nat-eip",
            "aws_internet_gateway.swiggy-igw",
            "aws_nat_gateway.swiggy-natgw-01",
            "aws_route_table.swiggy-app-rt",
            "aws_subnet.swiggy-pub-sub-1",
            "aws_subnet.swiggy-pvt-sub-3",
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "swiggy-rt-as-6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0780d134bfccc35ac",
            "route_table_id": "rtb-0d3440f0b7799a352",
            "subnet_id": "subnet-03e16336c266a12d9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.swiggy-nat-eip",
            "aws_internet_gateway.swiggy-igw",
            "aws_nat_gateway.swiggy-natgw-01",
            "aws_route_table.swiggy-app-rt",
            "aws_subnet.swiggy-pub-sub-1",
            "aws_subnet.swiggy-pvt-sub-4",
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "swiggy-alb-sg-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:352956325393:security-group/sg-0685eaca492e01aa2",
            "description": "Security group for Swiggy Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0685eaca492e01aa2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "swiggy-alb-sg-1",
            "name_prefix": "",
            "owner_id": "352956325393",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Swiggy ALB SG"
            },
            "tags_all": {
              "Name": "Swiggy ALB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e0db450459c2c5a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "swiggy-db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:352956325393:security-group/sg-0af1617bf34898a0d",
            "description": "Security group for Swiggy Database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af1617bf34898a0d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "swiggy-db-sg",
            "name_prefix": "",
            "owner_id": "352956325393",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Swiggy DB SG"
            },
            "tags_all": {
              "Name": "Swiggy DB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e0db450459c2c5a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "swiggy-ec2-asg-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:352956325393:security-group/sg-000b4a3647bac74ef",
            "description": "Security group for EC2 instances in ASG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000b4a3647bac74ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "swiggy-ec2-asg-sg",
            "name_prefix": "",
            "owner_id": "352956325393",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "swiggy-ec2-asg-sg"
            },
            "tags_all": {
              "Name": "swiggy-ec2-asg-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e0db450459c2c5a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "swiggy-ec2-asg-sg-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:352956325393:security-group/sg-0d5aea1795ca774b0",
            "description": "Security group for Swiggy EC2 instances in ASG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5aea1795ca774b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "swiggy-ec2-asg-sg-app",
            "name_prefix": "",
            "owner_id": "352956325393",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "swiggy-ec2-asg-sg-app"
            },
            "tags_all": {
              "Name": "swiggy-ec2-asg-sg-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e0db450459c2c5a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "swiggy-pub-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:352956325393:subnet/subnet-0a9830da7164a1372",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9830da7164a1372",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "352956325393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "swiggy-pub-sub-1"
            },
            "tags_all": {
              "Name": "swiggy-pub-sub-1"
            },
            "vpc_id": "vpc-06e0db450459c2c5a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "swiggy-pub-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:352956325393:subnet/subnet-0825c8cb5b164110b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0825c8cb5b164110b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "352956325393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "swiggy-pub-sub-2"
            },
            "tags_all": {
              "Name": "swiggy-pub-sub-2"
            },
            "vpc_id": "vpc-06e0db450459c2c5a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "swiggy-pvt-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:352956325393:subnet/subnet-088bc82767de0921a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088bc82767de0921a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "352956325393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "swiggy-pvt-sub-1"
            },
            "tags_all": {
              "Name": "swiggy-pvt-sub-1"
            },
            "vpc_id": "vpc-06e0db450459c2c5a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "swiggy-pvt-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:352956325393:subnet/subnet-093fa716193c69a81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093fa716193c69a81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "352956325393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "swiggy-pvt-sub-2"
            },
            "tags_all": {
              "Name": "swiggy-pvt-sub-2"
            },
            "vpc_id": "vpc-06e0db450459c2c5a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "swiggy-pvt-sub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:352956325393:subnet/subnet-0163c1e44ac9ea896",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0163c1e44ac9ea896",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "352956325393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "swiggy-pvt-sub-3"
            },
            "tags_all": {
              "Name": "swiggy-pvt-sub-3"
            },
            "vpc_id": "vpc-06e0db450459c2c5a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "swiggy-pvt-sub-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:352956325393:subnet/subnet-03e16336c266a12d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.80/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e16336c266a12d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "352956325393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "swiggy-pvt-sub-4"
            },
            "tags_all": {
              "Name": "swiggy-pvt-sub-4"
            },
            "vpc_id": "vpc-06e0db450459c2c5a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "swiggy-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:352956325393:vpc/vpc-06e0db450459c2c5a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0697a359bc9dfc8a7",
            "default_route_table_id": "rtb-0bd0c614b1a3ba7df",
            "default_security_group_id": "sg-0de11942ae20d15e1",
            "dhcp_options_id": "dopt-012b69959cda143b3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06e0db450459c2c5a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bd0c614b1a3ba7df",
            "owner_id": "352956325393",
            "tags": {
              "Name": "swiggy-vpc"
            },
            "tags_all": {
              "Name": "swiggy-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}